--- a/academia/templates/academia/registrar.html
+++ b/academia/templates/academia/registrar.html
@@ -5,6 +5,6 @@
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" style="background-color:#e75480; color:white; padding:10px; border:none; border-radius:4px;">Registrar</button>
+    <button type="submit" style="background-color:#e6007e; color:white; padding:10px; border:none; border-radius:4px;">Registrar</button>
   </form>
 {% endblock %}
