--- a/academia/templates/academia/landing.html
+++ b/academia/templates/academia/landing.html
@@ -55,7 +55,7 @@
     </p>
 
     <div style="margin: 30px 0;">
-        <h3>🎁 Promoção exclusiva: <span style="color: #e83e8c;">10% de desconto</span> na primeira matrícula com o cupom <strong>LANNY10</strong></h3>
+        <h3>🎁 Promoção exclusiva: <span style="color: #e6007e;">10% de desconto</span> na primeira matrícula com o cupom <strong>LANNY10</strong></h3>
     </div>
 
     <a href="{% url 'registrar' %}">
