--- a/academia/templates/academia/login.html
+++ b/academia/templates/academia/login.html
@@ -5,7 +5,7 @@
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" style="background-color:#e75480; color:white; padding:10px; border:none; border-radius:4px;">Entrar</button>
+    <button type="submit" style="background-color:#e6007e; color:white; padding:10px; border:none; border-radius:4px;">Entrar</button>
   </form>
 
   <p>Não tem conta? <a href="{% url 'registrar' %}">Matricule-se agora</a></p>
